order receive event from cart and send event to inventory

--- a/Inventory-Service/src/main/resources/application.properties
+++ b/Inventory-Service/src/main/resources/application.properties
@@ -6,13 +6,13 @@ server.port=8084
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
-#JWT Secret Key
+# JWT Secret Key
 jwt.secret=z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=
 
 # -----------------------------------
 # Database Configuration (MySQL)
 # -----------------------------------
-spring.datasource.url=jdbc:mysql://localhost:3306/inventory_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://mysql:3306/inventory_db?useSSL=false&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -31,3 +31,20 @@ eureka.instance.hostname=inventory-service
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.com.iuh.inventory_service=INFO
+
+# ===================== Kafka Configuration =====================
+spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.consumer.group-id=inventory-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.type.mapping=ValidateInventoryEvent:vn.com.iuh.fit.inventory_service.event.ValidateInventoryEvent
+
+
+
+# Topic names
+kafka.topic.inventory-validation-events=inventory-validation-events
+
