--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -23,7 +23,7 @@ jwt.secret=z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=
 # -----------------------------------
 # Eureka Client Configuration (Service Discovery)
 # -----------------------------------
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.hostname=cart-service
 
 # -----------------------------------
@@ -32,17 +32,15 @@ eureka.instance.hostname=cart-service
 logging.level.org.springframework.web=DEBUG
 logging.level.com.musicstore=INFO
 
-# ===============================
-# Kafka Configuration (Cart-Service Producer)
-# ===============================
+# Kafka Configuration
 spring.kafka.bootstrap-servers=kafka:9092
-spring.kafka.producer.retries=3        
-spring.kafka.producer.acks=all                             
+spring.kafka.producer.retries=3
+spring.kafka.producer.acks=all
 spring.kafka.producer.properties.enable.idempotence=true
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-# Kafka Topic
-cart.checkout.topic=checkout-events
+spring.kafka.producer.properties.max.request.size=5242880
+spring.kafka.producer.properties.compression.type=gzip
 
 
 
