--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -126,6 +126,9 @@ services:
       SPRING_DATASOURCE_PASSWORD: password
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-service:8761/eureka
       EUREKA_INSTANCE_HOSTNAME: inventory-service
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      SPRING_KAFKA_CONSUMER_GROUP_ID: inventory-group
+      SPRING_KAFKA_CONSUMER_AUTO_OFFSET_RESET: earliest
     networks:
       - microservice-net
 
@@ -199,15 +202,15 @@ services:
       - "8086:8086"
     depends_on:
       - eureka-service
-      - postgres
+      - mysql
       - kafka
     environment:
       SPRING_APPLICATION_NAME: order-service
       SERVER_PORT: 8086
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/order_db
-      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/order_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: password
-      SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
+      SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
       SPRING_KAFKA_CONSUMER_GROUP_ID: order-group
       SPRING_KAFKA_CONSUMER_AUTO_OFFSET_RESET: earliest
@@ -215,53 +218,12 @@ services:
       EUREKA_INSTANCE_HOSTNAME: order-service
     networks:
       - microservice-net
-#  # 13. Payment Service
-#  payment-service:
-#    container_name: payment-service
-#    build:
-#      context: ./payment-service
-#      dockerfile: Dockerfile
-#    ports:
-#      - "8087:8087"
-#    depends_on:
-#      - eureka-service
-#      - postgres
-#      - kafka
-#    environment:
-#      SPRING_APPLICATION_NAME: payment-service
-#      SERVER_PORT: 8087
-#      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/payment_db
-#      SPRING_DATASOURCE_USERNAME: postgres
-#      SPRING_DATASOURCE_PASSWORD: password
-#      SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
-#      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-#      SPRING_KAFKA_CONSUMER_GROUP_ID: payment-group
-#      SPRING_KAFKA_CONSUMER_AUTO_OFFSET_RESET: earliest
-#      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-service:8761/eureka
-#      EUREKA_INSTANCE_HOSTNAME: payment-service
-#    networks:
-#      - microservice-net
-
-
-  # 14. PostgreSQL
-  postgres:
-    container_name: postgres
-    image: postgres:17
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: order_db
-    ports:
-      - "5433:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - microservice-net
 
   # 15. Kafka Broker
   kafka:
     image: confluentinc/cp-kafka:7.2.2
     container_name: kafka
+    restart: always
     depends_on:
       - zookeeper
     ports:
@@ -269,21 +231,31 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     networks:
       - microservice-net
-
+    healthcheck:
+      test: [ "CMD", "kafka-topics", "--list", "--bootstrap-server", "kafka:9092" ]
+      interval: 10s
+      retries: 5
   # 16. Zookeeper
   zookeeper:
     image: confluentinc/cp-zookeeper:7.2.2
     container_name: zookeeper
+    restart: always
     ports:
       - "2181:2181"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
     networks:
       - microservice-net
+    healthcheck:
+      test: [ "CMD", "echo", "ruok", "|", "nc", "localhost", "2181" ]
+      interval: 10s
+      retries: 5
   # 17. Kafka UI (Kafdrop) - Debug Kafka messages
   kafdrop:
     image: obsidiandynamics/kafdrop
