--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -20,7 +20,7 @@ eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.hostname=auth-service
 
 # ===================== Database Configuration (MySQL) =====================
-spring.datasource.url=jdbc:mysql://mysql:3306/auth_db?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://mysql:3306/auth_db?useSSL=false&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
