--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -57,7 +57,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-
 		<!--  Spring Security Configuration (Để dùng @PreAuthorize) -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -146,7 +145,13 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
-
+	<repositories>
+		<repository>
+			<id>confluent</id>
+			<url>https://packages.confluent.io/maven/</url>
+		</repository>
+	</repositories>
 </project>
