--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,38 +1,77 @@
-#Order-Serivce
+# ===============================
+# Order Service Configuration
 # ===============================
 spring.application.name=order-service
 server.port=8086
 
 # ===============================
-# JWT
+# JWT Configuration
 # ===============================
 jwt.secret=z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=
+
 # ===============================
-#  Eureka Client
+# Eureka Client Configuration
 # ===============================
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
 eureka.instance.hostname=order-service
 
 # ===============================
-# Kafka config
+# Kafka Configuration (Order-Service)
 # ===============================
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.producer.retries=3
-spring.kafka.producer.acks=all
-spring.kafka.producer.properties.enable.idempotence=true
+spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.consumer.group-id=order-group
+
+# Consumer Configuration
 spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.consumer.max-poll-records=10
+spring.kafka.consumer.fetch-min-size=1
+spring.kafka.consumer.fetch-max-wait=500
+spring.kafka.consumer.properties.spring.json.trusted.packages=vn.com.iuh.fit.order_service.event
+spring.kafka.consumer.properties.spring.json.value.default.type=vn.com.iuh.fit.order_service.event.ValidateInventoryEvent
+
+# Producer Configuration
+spring.kafka.producer.acks=all
+spring.kafka.producer.retries=5
+spring.kafka.producer.buffer-memory=33554432
+spring.kafka.producer.properties.spring.json.trusted.packages=vn.com.iuh.fit.order_service.event
+
+# Topics Configuration
+cart.checkout.topic=checkout-events
 
 # ===============================
-# PostgreSQL Database
+# MySQL Database Configuration
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/order_db
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:mysql://mysql:3306/order_db?useSSL=false&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
+spring.datasource.username=root
 spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false  
 
-# Logging
+# Connection Pooling (HikariCP)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.max-lifetime=1800000
+
+# ===============================
+# Transaction Management
+# ===============================
+spring.transaction.default-timeout=30
+spring.transaction.rollback-on-commit-failure=true
+
+# ===============================
+# Logging Configuration
 # ===============================
 logging.level.org.springframework=INFO
 logging.level.com.order-service=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.file.name=logs/order-service.log
+
+
