--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -11,7 +11,7 @@ jwt.secret=z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=
 # -----------------------------------
 # Database Configuration (MySQL)
 # -----------------------------------
-spring.datasource.url=jdbc:mysql://localhost:3306/musicstore?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://mysql:3306/musicstore?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -23,7 +23,7 @@ spring.jpa.show-sql=true
 # -----------------------------------
 # Eureka Client Configuration (Service Discovery)
 # -----------------------------------
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
 eureka.instance.hostname=product-service
 
 # -----------------------------------
