--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -18,7 +18,7 @@ eureka.client.service-url.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.hostname=user-service
 
 # ===================== Database Configuration (MySQL) =====================
-spring.datasource.url=jdbc:mysql://mysql:3306/user_db?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://mysql:3306/user_db?useSSL=false&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
